--- a/casestudies/case-study-hvac.html
+++ b/casestudies/case-study-hvac.html
@@ -10,6 +10,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="case-study.css">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Turning Traffic Into Intent: Calculators & Conversion at HVAC.com",
+        "description": "Built high-intent tools from scratch that converted at 50x the site baseline, turning a high-traffic homeowner platform into a lead generation engine.",
+        "author": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io",
+            "sameAs": "https://www.linkedin.com/in/kevinmiddleton"
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io"
+        },
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://middleton.io/casestudies/case-study-hvac.html"
+        },
+        "url": "https://middleton.io/casestudies/case-study-hvac.html",
+        "image": "https://middleton.io/images/hvac-calculators.png",
+        "articleSection": "Case Study",
+        "keywords": ["Product Management", "Conversion Rate Optimization", "A/B Testing", "HVAC", "Lead Generation", "SaaS"]
+    }
+    </script>
     <!-- Privacy-friendly analytics by Plausible -->
     <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
     <script>
