--- a/casestudies/case-study-lever.html
+++ b/casestudies/case-study-lever.html
@@ -10,6 +10,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="case-study.css">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Moving Lever Upmarket: Bulk Import & HRIS Sync",
+        "description": "How we proved Lever could operate at enterprise scale. First by eliminating implementation friction, then by building enterprise-grade user management.",
+        "author": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io",
+            "sameAs": "https://www.linkedin.com/in/kevinmiddleton"
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io"
+        },
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://middleton.io/casestudies/case-study-lever.html"
+        },
+        "url": "https://middleton.io/casestudies/case-study-lever.html",
+        "image": "https://middleton.io/images/lever-logo.webp",
+        "articleSection": "Case Study",
+        "keywords": ["Product Management", "HRIS Integration", "Enterprise SaaS", "HR Tech", "SCIM", "User Provisioning"]
+    }
+    </script>
     <!-- Privacy-friendly analytics by Plausible -->
 <script async src="https://plausible.io/js/pa-jT7b-g_RtDUwXjON-J767.js"></script>
 <script>
