--- a/casestudies/case-study-oracle.html
+++ b/casestudies/case-study-oracle.html
@@ -10,6 +10,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="case-study.css">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Scaling Social: Platform Overhaul & Network Expansion at Oracle",
+        "description": "Led a year-long platform modernization, doubling social network coverage and shipping 36 features across UI, performance, and internationalization.",
+        "author": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io",
+            "sameAs": "https://www.linkedin.com/in/kevinmiddleton"
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io"
+        },
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://middleton.io/casestudies/case-study-oracle.html"
+        },
+        "url": "https://middleton.io/casestudies/case-study-oracle.html",
+        "image": "https://middleton.io/images/oracle-engage-v2.png",
+        "articleSection": "Case Study",
+        "keywords": ["Product Management", "Social Media", "Enterprise Software", "Internationalization", "Platform Modernization", "Oracle"]
+    }
+    </script>
     <!-- Privacy-friendly analytics by Plausible -->
 <script async src="https://plausible.io/js/pa-8-BhCQFQTZrglXDJEKfS-.js"></script>
 <script>
