--- a/casestudies/case-study-rocketlawyer-covea.html
+++ b/casestudies/case-study-rocketlawyer-covea.html
@@ -10,6 +10,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="case-study.css">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Co-Branded Partner Sites at Rocket Lawyer",
+        "description": "One integration. Six months. How we launched Rocket Lawyer's first enterprise partnership and built a platform for the next ten.",
+        "author": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io",
+            "sameAs": "https://www.linkedin.com/in/kevinmiddleton"
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io"
+        },
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://middleton.io/casestudies/case-study-rocketlawyer-covea.html"
+        },
+        "url": "https://middleton.io/casestudies/case-study-rocketlawyer-covea.html",
+        "image": "https://middleton.io/images/covea-login-screen.png",
+        "articleSection": "Case Study",
+        "keywords": ["Product Management", "Enterprise Partnerships", "Legal Tech", "B2B", "Platform Development", "White Label"]
+    }
+    </script>
     <!-- Privacy-friendly analytics by Plausible -->
 <script async src="https://plausible.io/js/pa-EjHecMcfwGKDLQNSORlAf.js"></script>
 <script>
