--- a/casestudies/case-study-rocketlawyer-mobile.html
+++ b/casestudies/case-study-rocketlawyer-mobile.html
@@ -10,6 +10,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="case-study.css">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Mobile Conversion Optimization at Rocket Lawyer",
+        "description": "Failed fast on desktop. Won big on mobile. Drove a 5% conversion lift for Rocket Lawyer's highest-revenue product line through targeted A/B testing.",
+        "author": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io",
+            "sameAs": "https://www.linkedin.com/in/kevinmiddleton"
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io"
+        },
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html"
+        },
+        "url": "https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html",
+        "image": "https://middleton.io/images/legal-document-interview.png",
+        "articleSection": "Case Study",
+        "keywords": ["Product Management", "Mobile Optimization", "Conversion Rate Optimization", "A/B Testing", "Legal Tech", "UX"]
+    }
+    </script>
     <!-- Privacy-friendly analytics by Plausible -->
     <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
     <script>
