--- a/casestudies/case-study-sendoso.html
+++ b/casestudies/case-study-sendoso.html
@@ -10,6 +10,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="case-study.css">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "eGift Platform Expansion & Square Partnership at Sendoso",
+        "description": "Scaled catalog coverage, landed strategic partnerships, and built operational infrastructure during a market inflection point.",
+        "author": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io",
+            "sameAs": "https://www.linkedin.com/in/kevinmiddleton"
+        },
+        "publisher": {
+            "@type": "Person",
+            "name": "Kevin Middleton",
+            "url": "https://middleton.io"
+        },
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://middleton.io/casestudies/case-study-sendoso.html"
+        },
+        "url": "https://middleton.io/casestudies/case-study-sendoso.html",
+        "image": "https://middleton.io/images/sendoso-egift-demo.gif",
+        "articleSection": "Case Study",
+        "keywords": ["Product Management", "Strategic Partnerships", "Global Expansion", "Marketing Tech", "eGifts", "SaaS Platform"]
+    }
+    </script>
     <!-- Privacy-friendly analytics by Plausible -->
 <script async src="https://plausible.io/js/pa-MRdoFby3N0nkctcj6OWuV.js"></script>
 <script>
