--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -47,11 +47,12 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Kevin Middleton",
-    "jobTitle": "Product Manager",
+    "jobTitle": "Full Stack Product Manager",
     "url": "https://middleton.io",
     "image": "https://middleton.io/catdad/images/catdad.png",
     "sameAs": [
-      "https://www.linkedin.com/in/kevinmiddleton"
+      "https://www.linkedin.com/in/kevinmiddleton",
+      "https://github.com/kevinmmiddleton"
     ],
     "address": {
       "@type": "PostalAddress",
@@ -63,7 +64,7 @@
     "knowsAbout": ["Product Management", "Enterprise Software", "Conversion Optimization", "Complex Integrations"],
     "hasOccupation": {
       "@type": "Occupation",
-      "name": "Product Manager",
+      "name": "Full Stack Product Manager",
       "occupationLocation": {
         "@type": "City",
         "name": "New York City"
