--- a/kevin/index.html
+++ b/kevin/index.html
@@ -24,18 +24,19 @@
       "name": "Kevin Middleton",
       "url": "https://middleton.io",
       "sameAs": [
-        "https://www.linkedin.com/in/kevinmiddleton"
+        "https://www.linkedin.com/in/kevinmiddleton",
+        "https://github.com/kevinmmiddleton"
       ],
-      "description": "Senior Product Manager with 12 years of experience across consumer, enterprise, and platform. Builds systems that help product teams not lose their minds.",
+      "description": "Full Stack Product Manager with 12 years of experience across consumer, enterprise, and platform. Builds systems that help product teams not lose their minds.",
       "hasOccupation": {
         "@type": "Occupation",
-        "name": "Senior Product Manager",
+        "name": "Full Stack Product Manager",
         "occupationalCategory": "15-1199.09",
         "description": "Builds systems that help product teams not lose their minds. 12 years across consumer, enterprise, and platform products.",
         "experienceRequirements": "12 years",
         "skills": ["Product Strategy", "Consumer Products", "Enterprise Products", "Platform Products", "Team Leadership"]
       },
-      "jobTitle": "Senior Product Manager",
+      "jobTitle": "Full Stack Product Manager",
       "knowsAbout": ["Product Management", "Consumer Products", "Enterprise Products", "Platform Products"],
       "workLocation": {
         "@type": "Place",
