--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -58,7 +58,12 @@
       "@type": "Person",
       "@id": "https://middleton.io/#person",
       "name": "Kevin Middleton",
-      "url": "https://middleton.io/"
+      "jobTitle": "Full Stack Product Manager",
+      "url": "https://middleton.io/",
+      "sameAs": [
+        "https://www.linkedin.com/in/kevinmiddleton",
+        "https://github.com/kevinmmiddleton"
+      ]
     },
     {
       "@type": "Service",
