--- a/casestudies/case-study-hvac.html
+++ b/casestudies/case-study-hvac.html
@@ -35,7 +35,9 @@
         "url": "https://middleton.io/casestudies/case-study-hvac.html",
         "image": "https://middleton.io/images/hvac-calculators.png",
         "articleSection": "Case Study",
-        "keywords": ["Product Management", "Conversion Rate Optimization", "A/B Testing", "HVAC", "Lead Generation", "SaaS"]
+        "keywords": ["Product Management", "Conversion Rate Optimization", "A/B Testing", "HVAC", "Lead Generation", "SaaS"],
+        "datePublished": "2024-01-01",
+        "dateModified": "2024-01-01"
     }
     </script>
     <!-- Privacy-friendly analytics by Plausible -->
