--- a/casestudies/case-study-lever.html
+++ b/casestudies/case-study-lever.html
@@ -35,7 +35,9 @@
         "url": "https://middleton.io/casestudies/case-study-lever.html",
         "image": "https://middleton.io/images/lever-logo.webp",
         "articleSection": "Case Study",
-        "keywords": ["Product Management", "HRIS Integration", "Enterprise SaaS", "HR Tech", "SCIM", "User Provisioning"]
+        "keywords": ["Product Management", "HRIS Integration", "Enterprise SaaS", "HR Tech", "SCIM", "User Provisioning"],
+        "datePublished": "2024-01-01",
+        "dateModified": "2024-01-01"
     }
     </script>
     <!-- Privacy-friendly analytics by Plausible -->
