--- a/casestudies/case-study-oracle.html
+++ b/casestudies/case-study-oracle.html
@@ -35,7 +35,9 @@
         "url": "https://middleton.io/casestudies/case-study-oracle.html",
         "image": "https://middleton.io/images/oracle-engage-v2.png",
         "articleSection": "Case Study",
-        "keywords": ["Product Management", "Social Media", "Enterprise Software", "Internationalization", "Platform Modernization", "Oracle"]
+        "keywords": ["Product Management", "Social Media", "Enterprise Software", "Internationalization", "Platform Modernization", "Oracle"],
+        "datePublished": "2024-01-01",
+        "dateModified": "2024-01-01"
     }
     </script>
     <!-- Privacy-friendly analytics by Plausible -->
