--- a/casestudies/case-study-rocketlawyer-covea.html
+++ b/casestudies/case-study-rocketlawyer-covea.html
@@ -35,7 +35,9 @@
         "url": "https://middleton.io/casestudies/case-study-rocketlawyer-covea.html",
         "image": "https://middleton.io/images/covea-login-screen.png",
         "articleSection": "Case Study",
-        "keywords": ["Product Management", "Enterprise Partnerships", "Legal Tech", "B2B", "Platform Development", "White Label"]
+        "keywords": ["Product Management", "Enterprise Partnerships", "Legal Tech", "B2B", "Platform Development", "White Label"],
+        "datePublished": "2024-01-01",
+        "dateModified": "2024-01-01"
     }
     </script>
     <!-- Privacy-friendly analytics by Plausible -->
