--- a/casestudies/case-study-rocketlawyer-mobile.html
+++ b/casestudies/case-study-rocketlawyer-mobile.html
@@ -35,7 +35,9 @@
         "url": "https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html",
         "image": "https://middleton.io/images/legal-document-interview.png",
         "articleSection": "Case Study",
-        "keywords": ["Product Management", "Mobile Optimization", "Conversion Rate Optimization", "A/B Testing", "Legal Tech", "UX"]
+        "keywords": ["Product Management", "Mobile Optimization", "Conversion Rate Optimization", "A/B Testing", "Legal Tech", "UX"],
+        "datePublished": "2024-01-01",
+        "dateModified": "2024-01-01"
     }
     </script>
     <!-- Privacy-friendly analytics by Plausible -->
