--- a/casestudies/case-study-sendoso.html
+++ b/casestudies/case-study-sendoso.html
@@ -35,7 +35,9 @@
         "url": "https://middleton.io/casestudies/case-study-sendoso.html",
         "image": "https://middleton.io/images/sendoso-egift-demo.gif",
         "articleSection": "Case Study",
-        "keywords": ["Product Management", "Strategic Partnerships", "Global Expansion", "Marketing Tech", "eGifts", "SaaS Platform"]
+        "keywords": ["Product Management", "Strategic Partnerships", "Global Expansion", "Marketing Tech", "eGifts", "SaaS Platform"],
+        "datePublished": "2024-01-01",
+        "dateModified": "2024-01-01"
     }
     </script>
     <!-- Privacy-friendly analytics by Plausible -->
