--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -40,12 +40,13 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Kevin Middleton",
-        "url": "https://middleton.io/kevinos/",
+        "url": "https://middleton.io",
         "image": "https://middleton.io/images/profile-picture.jpg",
         "description": "Full Stack Product Manager with 12+ years of experience building consumer, enterprise, and platform SaaS products. I bring structure to ambiguity and help teams move faster together.",
         "jobTitle": "Full Stack Product Manager",
         "sameAs": [
-            "https://www.linkedin.com/in/kevinmiddleton"
+            "https://www.linkedin.com/in/kevinmiddleton",
+            "https://github.com/kevinmmiddleton"
         ],
         "address": {
             "@type": "PostalAddress",
@@ -74,7 +75,7 @@
         ],
         "hasOccupation": {
             "@type": "Occupation",
-            "name": "Senior Product Manager",
+            "name": "Full Stack Product Manager",
             "occupationLocation": {
                 "@type": "Country",
                 "name": "United States"
