--- a/recipes/index.html
+++ b/recipes/index.html
@@ -17,7 +17,8 @@
   <meta property="twitter:description" content="Easy, actually tested, picky-eater approved. Measured in grams, no life stories.">
   <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.png">
 
-  <meta name="theme-color" content="#faf8f4">
+  <meta name="theme-color" content="#faf8f4" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#1a1a1a" media="(prefers-color-scheme: dark)">
 
   <link rel="icon" href="https://middleton.io/recipes/images/egg.png">
   <link rel="apple-touch-icon" href="https://middleton.io/recipes/images/egg.png">
