--- a/kevin/index.html
+++ b/kevin/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#1a1c2e">
+  <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#1a1c2e" media="(prefers-color-scheme: dark)">
   <meta name="description" content="New York City's hottest product manager. 12 years across consumer, enterprise, and platform. This place has everything: spreadsheets that feel like violence, human Jira boards, and the quiet confidence of a man who sourced $1.4M before he was even hired.">
   <link rel="canonical" href="https://middleton.io/kevin">
   <link rel="icon" type="image/png" href="https://middleton.io/kevin/images/fire.png">
