--- a/casestudies/case-study-hvac.html
+++ b/casestudies/case-study-hvac.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
-    <title>HVAC.com Case Study</title>
+    <title>HVAC.com Case Study | Kevin Middleton</title>
+    <meta name="description" content="Built high-intent calculators that converted at 50x the site baseline, turning a high-traffic homeowner platform into a lead generation engine.">
+    <link rel="canonical" href="https://middleton.io/casestudies/case-study-hvac.html">
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://middleton.io/casestudies/case-study-hvac.html">
+    <meta property="og:title" content="Turning Traffic Into Intent: Calculators & Conversion at HVAC.com">
+    <meta property="og:description" content="Built high-intent calculators that converted at 50x the site baseline, turning a high-traffic homeowner platform into a lead generation engine.">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Turning Traffic Into Intent: Calculators & Conversion at HVAC.com">
+    <meta name="twitter:description" content="Built high-intent calculators that converted at 50x the site baseline.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
