--- a/casestudies/case-study-lever.html
+++ b/casestudies/case-study-lever.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
-    <title>Lever Case Study</title>
+    <title>Lever Case Study | Kevin Middleton</title>
+    <meta name="description" content="How we proved Lever could operate at enterprise scale—eliminating implementation friction and building enterprise-grade HRIS user management.">
+    <link rel="canonical" href="https://middleton.io/casestudies/case-study-lever.html">
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://middleton.io/casestudies/case-study-lever.html">
+    <meta property="og:title" content="Moving Lever Upmarket: Bulk Import & HRIS Sync">
+    <meta property="og:description" content="How we proved Lever could operate at enterprise scale—eliminating implementation friction and building enterprise-grade user management.">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Moving Lever Upmarket: Bulk Import & HRIS Sync">
+    <meta name="twitter:description" content="How we proved Lever could operate at enterprise scale.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
