--- a/casestudies/case-study-oracle.html
+++ b/casestudies/case-study-oracle.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
-    <title>Oracle Case Study</title>
+    <title>Oracle Case Study | Kevin Middleton</title>
+    <meta name="description" content="Led a year-long platform modernization at Oracle, doubling social network coverage and shipping 36 features across UI, performance, and i18n.">
+    <link rel="canonical" href="https://middleton.io/casestudies/case-study-oracle.html">
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://middleton.io/casestudies/case-study-oracle.html">
+    <meta property="og:title" content="Scaling Social: Platform Overhaul & Network Expansion at Oracle">
+    <meta property="og:description" content="Led a year-long platform modernization, doubling social network coverage and shipping 36 features.">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Scaling Social: Platform Overhaul & Network Expansion at Oracle">
+    <meta name="twitter:description" content="Led a year-long platform modernization, doubling social network coverage.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
