--- a/casestudies/case-study-rocketlawyer-covea.html
+++ b/casestudies/case-study-rocketlawyer-covea.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
-    <title>Rocket Lawyer Case Study</title>
+    <title>Rocket Lawyer Covea Partnership | Kevin Middleton</title>
+    <meta name="description" content="One integration. Six months. How we launched Rocket Lawyer's first enterprise partnership and built a platform for the next ten.">
+    <link rel="canonical" href="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html">
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://middleton.io/casestudies/case-study-rocketlawyer-covea.html">
+    <meta property="og:title" content="Co-Branded Partner Sites at Rocket Lawyer">
+    <meta property="og:description" content="One integration. Six months. How we launched Rocket Lawyer's first enterprise partnership.">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Co-Branded Partner Sites at Rocket Lawyer">
+    <meta name="twitter:description" content="How we launched Rocket Lawyer's first enterprise partnership.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
