--- a/casestudies/case-study-sendoso.html
+++ b/casestudies/case-study-sendoso.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
-    <title>Sendoso Case Study</title>
+    <title>Sendoso Case Study | Kevin Middleton</title>
+    <meta name="description" content="Scaled eGift catalog coverage, landed strategic partnerships including Square, and built operational infrastructure during a market inflection point.">
+    <link rel="canonical" href="https://middleton.io/casestudies/case-study-sendoso.html">
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://middleton.io/casestudies/case-study-sendoso.html">
+    <meta property="og:title" content="eGift Platform Expansion & Square Partnership at Sendoso">
+    <meta property="og:description" content="Scaled catalog coverage, landed strategic partnerships, and built operational infrastructure.">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="eGift Platform Expansion & Square Partnership at Sendoso">
+    <meta name="twitter:description" content="Scaled catalog coverage and landed strategic partnerships at Sendoso.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
