--- a/casestudies/case-study-rocketlawyer-mobile.html
+++ b/casestudies/case-study-rocketlawyer-mobile.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
-    <title>Rocket Lawyer Mobile Conversion</title>
+    <title>Rocket Lawyer Mobile Conversion | Kevin Middleton</title>
+    <meta name="description" content="Failed fast on desktop. Won big on mobile. Drove a 5% conversion lift for Rocket Lawyer's highest-revenue product line through targeted A/B testing.">
+    <link rel="canonical" href="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html">
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://middleton.io/casestudies/case-study-rocketlawyer-mobile.html">
+    <meta property="og:title" content="Mobile Conversion Optimization at Rocket Lawyer">
+    <meta property="og:description" content="Failed fast on desktop. Won big on mobile. Drove a 5% conversion lift through targeted A/B testing.">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Mobile Conversion Optimization at Rocket Lawyer">
+    <meta name="twitter:description" content="Drove a 5% conversion lift through targeted A/B testing on mobile.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
