--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Kevin Middleton</title>
+    <title>KevinOS | Kevin Middleton</title>
+    <meta name="description" content="Kevin Middleton's portfolio reimagined as a retro desktop OS. 12+ years building consumer, enterprise, and platform SaaS products.">
+    <link rel="canonical" href="https://middleton.io/kevinos/">
     <link rel="icon" href="https://middleton.io/kevinos/images/alien-monster.png">
     <link rel="apple-touch-icon" href="https://middleton.io/kevinos/images/alien-monster.png">
     <!-- Theme color for browser chrome -->
