--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Fixer: Product Problem Solving | Kevin Middleton</title>
   <meta name="description" content="Something in your product isn't working. That's a solvable problem. Get 30 minutes of calm, judgment-free product thinking with someone who's been there." />
+  <link rel="canonical" href="https://middleton.io/fixer/">
 
   <!-- Theme Color -->
   <meta name="theme-color" content="#7a5a10" media="(prefers-color-scheme: light)">
