--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kevin's Recipe Book</title>
   <meta name="description" content="Product manager by day, home cook by night. Easy, actually tested, picky-eater approved recipes. Measured in grams, no life stories.">
+  <link rel="canonical" href="https://middleton.io/recipes/">
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://middleton.io/recipes/">
