--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="https://middleton.io/images/wave.png">
+    <!-- Identity verification -->
+    <link rel="me" href="https://www.linkedin.com/in/kevinmiddleton/">
+    <link rel="me" href="https://github.com/kevinmmiddleton">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Kevin Middleton - Full Stack Product Manager">
     <meta property="og:description"
