--- a/nyc/index.htm
+++ b/nyc/index.htm
@@ -11,6 +11,8 @@
   <link rel="canonical" href="https://middleton.io/nyc/">
   <link rel="icon" href="https://middleton.io/nyc/images/statue-of-liberty.png" type="image/png">
   <link rel="apple-touch-icon" href="https://middleton.io/nyc/images/statue-of-liberty.png">
+  <link rel="me" href="https://www.linkedin.com/in/kevinmiddleton/">
+  <link rel="me" href="https://github.com/kevinmmiddleton">
   <meta name="theme-color" content="#f4f4f7" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0f1115" media="(prefers-color-scheme: dark)">
 
