--- a/catdad/index.htm
+++ b/catdad/index.htm
@@ -9,6 +9,8 @@
   <link rel="canonical" href="https://middleton.io/catdad/">
   <link rel="icon" type="image/png" href="https://middleton.io/catdad/images/sparkles.png">
   <link rel="apple-touch-icon" href="https://middleton.io/catdad/images/sparkles.png">
+  <link rel="me" href="https://www.linkedin.com/in/kevinmiddleton/">
+  <link rel="me" href="https://github.com/kevinmmiddleton">
 
   <!-- Theme color for browser chrome -->
   <meta name="theme-color" content="#FFB7C5" media="(prefers-color-scheme: light)">
