--- a/kevin/index.html
+++ b/kevin/index.html
@@ -10,6 +10,8 @@
   <link rel="canonical" href="https://middleton.io/kevin">
   <link rel="icon" type="image/png" href="https://middleton.io/kevin/images/fire.png">
   <link rel="apple-touch-icon" href="https://middleton.io/kevin/images/fire.png">
+  <link rel="me" href="https://www.linkedin.com/in/kevinmiddleton/">
+  <link rel="me" href="https://github.com/kevinmmiddleton">
   <title>KEVIN?! — New York's Hottest Product Manager</title>
 
   <!-- JSON-LD Structured Data -->
