--- a/fixer/index.htm
+++ b/fixer/index.htm
@@ -7,6 +7,8 @@
   <title>The Fixer: Product Problem Solving | Kevin Middleton</title>
   <meta name="description" content="Something in your product isn't working. That's a solvable problem. Get 30 minutes of calm, judgment-free product thinking with someone who's been there." />
   <link rel="canonical" href="https://middleton.io/fixer/">
+  <link rel="me" href="https://www.linkedin.com/in/kevinmiddleton/">
+  <link rel="me" href="https://github.com/kevinmmiddleton">
 
   <!-- Theme Color -->
   <meta name="theme-color" content="#7a5a10" media="(prefers-color-scheme: light)">
