--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -9,6 +9,8 @@
     <link rel="canonical" href="https://middleton.io/kevinos/">
     <link rel="icon" href="https://middleton.io/kevinos/images/alien-monster.png">
     <link rel="apple-touch-icon" href="https://middleton.io/kevinos/images/alien-monster.png">
+    <link rel="me" href="https://www.linkedin.com/in/kevinmiddleton/">
+    <link rel="me" href="https://github.com/kevinmmiddleton">
     <!-- Theme color for browser chrome -->
     <meta name="theme-color" content="#f0f0f5" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0a0a0f" media="(prefers-color-scheme: dark)">
