--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -1890,6 +1890,9 @@
                     <span class="window-dot green"></span>
                 </div>
                 <span class="lightbox-title" id="lightboxTitle">Image</span>
+                <button class="lightbox-mobile-close" onclick="closeLightbox()">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><path d="M18 6L6 18M6 6l12 12"/></svg>
+                </button>
             </div>
             <div class="lightbox-body">
                 <img src="" alt="" id="lightboxImage">
