--- a/recipes/index.html
+++ b/recipes/index.html
@@ -3,46 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kevin's Recipe Book</title>
-  <meta name="description" content="Product manager by day, home cook by night. Easy, actually tested, picky-eater approved recipes. Measured in grams, no life stories.">
+  <title>Cook Like a PM</title>
+  <meta name="description" content="Measured. Tested. Minimal scrolling. Recipes from a PM who uses a food scale and skips the life stories.">
   <link rel="canonical" href="https://middleton.io/recipes/">
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://middleton.io/recipes/">
-  <meta property="og:title" content="Kevin's Recipe Book">
-  <meta property="og:description" content="Easy, actually tested, picky-eater approved. Measured in grams, no life stories.">
+  <meta property="og:title" content="Cook Like a PM">
+  <meta property="og:description" content="Measured. Tested. Minimal scrolling.">
   <meta property="og:image" content="https://middleton.io/recipes/images/recipes.png">
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://middleton.io/recipes/">
-  <meta property="twitter:title" content="Kevin's Recipe Book">
-  <meta property="twitter:description" content="Easy, actually tested, picky-eater approved. Measured in grams, no life stories.">
+  <meta property="twitter:title" content="Cook Like a PM">
+  <meta property="twitter:description" content="Measured. Tested. Minimal scrolling.">
   <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.png">
 
-  <meta name="theme-color" content="#faf8f4" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#1a1a1a" media="(prefers-color-scheme: dark)">
+  <meta name="theme-color" content="#fff0f5" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#fff0f5" media="(prefers-color-scheme: dark)">
 
   <link rel="icon" href="https://middleton.io/recipes/images/egg.png">
   <link rel="apple-touch-icon" href="https://middleton.io/recipes/images/egg.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="page-wrapper">
     <header>
       <div class="header-title">
-        <span class="header-icon">🍳</span>
         <div>
-          <h1>Kevin's Recipe Book</h1>
-          <p class="subtitle">Easy, actually tested, picky-eater approved.</p>
+          <h1>Cook Like a PM</h1>
+          <p class="subtitle">MEASURED. TESTED. MINIMAL SCROLLING.</p>
         </div>
       </div>
-      
+
       <details class="preamble">
         <summary>
-          <span class="preamble-icon">✦</span>
+          <span class="preamble-icon">+</span>
           Why does this exist?
         </summary>
         <div class="preamble-content">
@@ -77,7 +76,7 @@
     </main>
 
     <footer>
-      <p>Made by <a href="https://middleton.io">Kevin</a> using a food scale.</p>
+      <p>Made by <a href="https://middleton.io">Kevin</a>. Say hi. I also do product stuff.</p>
     </footer>
   </div>
 
