--- a/recipes/index.html
+++ b/recipes/index.html
@@ -18,8 +18,8 @@
   <meta property="twitter:description" content="Measured. Tested. Minimal scrolling.">
   <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.png">
 
-  <meta name="theme-color" content="#fff0f5" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#fff0f5" media="(prefers-color-scheme: dark)">
+  <meta name="theme-color" content="#fefcfd" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#0d0d0f" media="(prefers-color-scheme: dark)">
 
   <link rel="icon" href="https://middleton.io/recipes/images/egg.png">
   <link rel="apple-touch-icon" href="https://middleton.io/recipes/images/egg.png">
@@ -33,8 +33,9 @@
   <div class="page-wrapper">
     <header>
       <div class="header-title">
-        <div>
-          <h1>Cook Like a PM</h1>
+        <img src="https://middleton.io/recipes/images/chef-technologist.png" alt="" class="header-emoji">
+        <div class="header-text">
+          <h1><span class="title-line title-top">Cook Like a</span><span class="title-line title-pm">PM</span></h1>
           <p class="subtitle">MEASURED. TESTED. MINIMAL SCROLLING.</p>
         </div>
       </div>
