--- a/recipes/index.html
+++ b/recipes/index.html
@@ -21,8 +21,8 @@
   <meta name="theme-color" content="#fefcfd" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0d0d0f" media="(prefers-color-scheme: dark)">
 
-  <link rel="icon" href="https://middleton.io/recipes/images/egg.png">
-  <link rel="apple-touch-icon" href="https://middleton.io/recipes/images/egg.png">
+  <link rel="icon" href="https://middleton.io/recipes/images/chef-technologist.png">
+  <link rel="apple-touch-icon" href="https://middleton.io/recipes/images/chef-technologist.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
