--- a/404.html
+++ b/404.html
@@ -362,7 +362,7 @@
         <span class="label">Office Hours</span>
       </a>
       <a href="/recipes/" class="universe" title="Recipe Book">
-        <span class="emoji">🍳</span>
+        <img class="emoji" src="https://middleton.io/recipes/images/chef-technologist.png" alt="Chef Technologist" style="width: 32px; height: 32px; object-fit: contain;">
         <span class="label">Recipes</span>
       </a>
     </div>
