--- a/index.htm
+++ b/index.htm
@@ -108,7 +108,7 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <nav class="nav-container">
+        <nav class="nav-container has-cta">
             <a href="#hero" class="logo">
                 <span id="header-name" class="logo-text">
                     <span class="logo-name">Kevin Middleton</span>
@@ -126,31 +126,38 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#connect">Connect</a></li>
+                <li><a href="#connect">Let's Talk</a></li>
             </ul>
+            <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" rel="noopener noreferrer" class="header-cta plausible-event-name=Header+Calendly">Book a Call</a>
         </nav>
     </header>
 
     <main>
         <!-- Hero Section -->
-        <section id="hero" class="hero hero-modern">
+        <section id="hero" class="hero hero-v2">
             <div class="hero-inner">
-                <div>
-                    <h1 class="hero-name">Kevin Middleton</h1>
-                    <p class="hero-title">Full‑Stack&nbsp;Product&nbsp;Manager&nbsp;·&nbsp;New&nbsp;York,&nbsp;NY</p>
+                <!-- Status Badge -->
+                <span class="status-badge">Open to Opportunities</span>
 
-                    <p class="hero-summary">
-                        I make complex work feel simple.
-                    </p>
+                <!-- Name -->
+                <h1 class="hero-name">Kevin Middleton</h1>
 
-                    <div class="hero-actions">
-                        <a href="#experience" class="btn btn-primary">See My Work</a>
-                        <a href="#about" class="btn btn-secondary">About Me</a>
-                    </div>
-                    <p class="hero-side-project">
-                        💻 Currently tinkering with: <a href="https://middleton.io/kevinos" target="_blank">KevinOS</a>
-                    </p>
+                <!-- Gradient Tagline -->
+                <p class="hero-tagline">I make complex work feel simple.</p>
+
+                <!-- Role & Location -->
+                <p class="hero-title">Full&#8209;Stack&nbsp;Product&nbsp;Manager&nbsp;·&nbsp;New&nbsp;York,&nbsp;NY</p>
+
+                <!-- Action Buttons -->
+                <div class="hero-actions-v2">
+                    <a href="#connect" class="btn btn-primary plausible-event-name=Hero+Lets+Talk">Let's Talk</a>
+                    <a href="#experience" class="btn btn-view-work">See My Experience</a>
                 </div>
+
+                <!-- Side Project -->
+                <p class="hero-side-project">
+                    💻 Currently tinkering with: <a href="https://middleton.io/kevinos" target="_blank">KevinOS</a>
+                </p>
             </div>
         </section>
 
