--- a/index.htm
+++ b/index.htm
@@ -137,16 +137,16 @@
         <section id="hero" class="hero hero-v2">
             <div class="hero-inner">
                 <!-- Status Badge -->
-                <span class="status-badge">Open to Opportunities</span>
+                <span class="status-badge">Open to Work</span>
 
                 <!-- Name -->
                 <h1 class="hero-name">Kevin Middleton</h1>
 
-                <!-- Gradient Tagline -->
-                <p class="hero-tagline">I make complex work feel simple.</p>
-
                 <!-- Role & Location -->
                 <p class="hero-title">Full&#8209;Stack&nbsp;Product&nbsp;Manager&nbsp;·&nbsp;New&nbsp;York,&nbsp;NY</p>
+
+                <!-- Gradient Tagline -->
+                <p class="hero-tagline">I make complex work feel simple.</p>
 
                 <!-- Action Buttons -->
                 <div class="hero-actions-v2">
