--- a/index.htm
+++ b/index.htm
@@ -371,7 +371,7 @@
                                         Product Advisor)</em></div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2024 — 2025</div>
+                                <div class="exp-period">Sep 2024 — Nov 2025</div>
                                 <div class="exp-location">New York, NY</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -437,7 +437,7 @@
                                 <div class="exp-title">Senior Product Manager, Growth</div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2024 — 2025</div>
+                                <div class="exp-period">Feb 2024 — Jun 2025</div>
                                 <div class="exp-location">New York, NY</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -505,7 +505,7 @@
                                 <div class="exp-title">Co-Founder &amp; Product Advisor</div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2023</div>
+                                <div class="exp-period">May 2023 — Sep 2023</div>
                                 <div class="exp-location">Berkeley, CA</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -565,7 +565,7 @@
                                 <div class="exp-title">Senior Product Manager, HRIS Sync Lead</div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2021 — 2023</div>
+                                <div class="exp-period">Dec 2021 — Apr 2023</div>
                                 <div class="exp-location">San Francisco, CA</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -628,7 +628,7 @@
                                     Expansion</div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2021</div>
+                                <div class="exp-period">Mar 2021 — Dec 2021</div>
                                 <div class="exp-location">San Francisco, CA</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -689,7 +689,7 @@
                                 <div class="exp-title">Senior Product Manager, Core Product &amp; Platform</div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2018 — 2021</div>
+                                <div class="exp-period">Apr 2018 — Jan 2021</div>
                                 <div class="exp-location">San Francisco, CA</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -759,7 +759,7 @@
                                     Network Expansion</div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2013 — 2018</div>
+                                <div class="exp-period">Jun 2013 — Apr 2018</div>
                                 <div class="exp-location">San Francisco, CA</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
