--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -426,7 +426,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Co-Founder & Director of PM (initially Product Advisor)</div>
-                                <div class="exp-date">2024 — 2025</div>
+                                <div class="exp-date">Sep 2024 — Nov 2025</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Began supporting GridStrong.ai in September 2024 as a Product Advisor, creating early
@@ -477,7 +477,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Growth</div>
-                                <div class="exp-date">2024 — 2025</div>
+                                <div class="exp-date">Feb 2024 — Jun 2025</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Led product strategy, UX, and growth for HVAC.com, a homeowner platform with ~2M
@@ -529,7 +529,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Co-Founder & Product Advisor</div>
-                                <div class="exp-date">2023</div>
+                                <div class="exp-date">May 2023 — Sep 2023</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Shaped early product direction for an AI-powered learning platform that helped
@@ -576,7 +576,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, HRIS Sync Lead</div>
-                                <div class="exp-date">2021 — 2023</div>
+                                <div class="exp-date">Dec 2021 — Apr 2023</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Owned end-to-end development of HRIS Sync, a core enterprise integration that
@@ -628,7 +628,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Core Platform & eGift</div>
-                                <div class="exp-date">2021</div>
+                                <div class="exp-date">Mar 2021 — Dec 2021</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Led product strategy for the Core Platform and eGift expansion. Owned partnerships
@@ -674,7 +674,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Core Product & Platform</div>
-                                <div class="exp-date">2018 — 2021</div>
+                                <div class="exp-date">Apr 2018 — Jan 2021</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Led product strategy and execution for Rocket Lawyer's Platform and Legal Document
@@ -729,7 +729,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Senior PM, Engage & Integrations</div>
-                                <div class="exp-date">2013 — 2018</div>
+                                <div class="exp-date">Jun 2013 — Apr 2018</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Promoted to lead Oracle Social Cloud's Engage product through a full platform
